# fractal-specifications

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  align_version.py  pyproject.toml  tox.ini
.github/workflows/: build.yml  publish.yml
fractal_specifications/: __init__.py  py.typed
fractal_specifications/contrib/django/: specifications.py
fractal_specifications/contrib/duckdb/: specifications.py
fractal_specifications/contrib/elasticsearch/: specifications.py
fractal_specifications/contrib/google_firestore/: specifications.py
fractal_specifications/contrib/mongo/: specifications.py
fractal_specifications/contrib/pandas/: specifications.py
fractal_specifications/contrib/postgresql/: specifications.py
fractal_specifications/contrib/sqlalchemy/: specifications.py
fractal_specifications/generic/: collections.py  dsl_parser.py  operators.py  specification.py
tests/contrib/django/: test_specifications.py
tests/contrib/duckdb/: test_integration.py  test_specifications.py
tests/contrib/elasticsearch/: test_specifications.py
tests/contrib/google_firestore/: test_specifications.py
tests/contrib/mongo/: test_specifications.py
tests/contrib/pandas/: test_specifications.py
tests/contrib/postgresql/: test_specifications.py
tests/contrib/sqlalchemy/: test_specifications.py
tests/fixtures/: __init__.py  specifications.py
tests/fractal/specifications/: test_equals_specification.py
tests/fractal/specifications/generic/: test_collections.py  test_specification.py
tests/generic/: test_collections.py  test_operators.py  test_serialization.py  test_specification.py
